[tool.poetry]
name = "hexoshi"
version = "0.3.1"
description = "Hexoshi is an action-adventure maze game, a metroidvania."
authors = ["jakkemerke <<>>"]
license = "GPL-3.0"
readme = "README.txt"


[tool.poetry.dependencies]
python = "^3.6.8"
pygame = ">=1.9.1, <2.0.0"
uniseg = ">=0.7"
sge = ">=1.7, <3.0"
xsge_gui = ">=1.2"
xsge_lighting = ">=1.0"
xsge_particle = ">=1.0"
xsge_path = ">=1.0"
xsge_physics = ">=0.12"
xsge_tiled = ">=1.0"


# [tool.poetry.group.dev.dependencies]
[tool.poetry.dev-dependencies]
black = "^20.0"
coverage = "^6.2"
flake8 = "^5.0"
isort = "^4.3"
mypy = "^0.942"
pyclean = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
